--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_NODE_ADDRESS=wss://node-workshop.gear.rs:443
 REACT_APP_DEFAULT_NODES_URL=https://idea.gear-tech.io/gear-nodes
+REACT_APP_IPFS_ADDRESS=https://ipfs.gear-tech.io/api/v0
+REACT_APP_IPFS_GATEWAY_ADDRESS=https://ipfs-gw.gear-tech.io/ipfs
