--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "clsx": "1.2.1",
+    "embla-carousel-react": "8.0.0-rc05",
     "jotai": "2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
