--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,6 +45,12 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev
+          build-args: |
+            REACT_APP_NODE_ADDRESS=${{ secrets.REACT_APP_NODE_ADDRESS }}
+            REACT_APP_NODE_ADDRESS=${{ secrets.REACT_APP_DEFAULT_NODES_URL }}
+            REACT_APP_IPFS_ADDRESS=${{ secrets.REACT_APP_IPFS_ADDRESS }}
+            REACT_APP_IPFS_GATEWAY_ADDRESS=${{ secrets.REACT_APP_IPFS_GATEWAY_ADDRESS }}
+            REACT_APP_DEFAULT_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_CONTRACT_ADDRESS }}
 
   deploy-to-k8s:
     needs: build-simple-nft-image
