--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "dapp",
   "version": "0.1.1",
   "private": true,
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@gear-js/api": "0.32.4",
     "@gear-js/react-hooks": "0.5.27",
@@ -13,32 +19,43 @@
     "@polkadot/types": "10.9.1",
     "@polkadot/util": "12.3.2",
     "@polkadot/wasm-crypto": "7.2.1",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "13.5.0",
+    "@radix-ui/react-scroll-area": "1.0.4",
     "@types/jest": "27.5.1",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
     "assert": "2.0.0",
     "buffer": "6.0.3",
+    "class-variance-authority": "0.7.0",
     "clsx": "1.2.1",
     "jotai": "2.1.0",
     "keen-slider": "6.8.5",
+    "lucide-react": "0.263.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.5",
-    "sass": "1.62.0",
-    "typescript": "4.9.5",
     "web-vitals": "3.3.1"
   },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/node": "18.17.1",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.25.0",
+    "@typescript-eslint/parser": "5.25.0",
+    "eslint": "8.16.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "3.0.1",
+    "react-app-rewired": "2.2.1",
+    "sass": "1.62.0",
+    "typescript": "4.9.5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,19 +73,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.25.0",
-    "@typescript-eslint/parser": "5.25.0",
-    "eslint": "8.16.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "react-app-rewired": "2.2.1"
   },
   "lint-staged": {
     "./**/*.{js,css,ts,tsx}": "eslint --fix"
