--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,6 +53,7 @@ jobs:
             REACT_APP_TESTNET_NFT_CONTRACT_ADDRESS=${{ secrets.REACT_APP_TESTNET_NFT_CONTRACT_ADDRESS }}
             REACT_APP_DEFAULT_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_CONTRACT_ADDRESS }}
             REACT_APP_DEFAULT_TESTNET_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_TESTNET_CONTRACT_ADDRESS }}
+            REACT_APP_TESTNET_IPFS_GATEWAY_ADDRESS=${{ secrets.REACT_APP_TESTNET_IPFS_GATEWAY_ADDRESS }}
 
   deploy-to-k8s:
     needs: build-simple-nft-image
