--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
   },
   "dependencies": {
     "@gear-js/api": "0.33.1",
-    "@gear-js/react-hooks": "0.6.2",
+    "@gear-js/react-hooks": "0.6.3",
     "@gear-js/ui": "0.5.19",
     "@mantine/form": "6.0.8",
     "@polkadot/api": "10.9.1",
     "@polkadot/extension-dapp": "0.46.5",
-    "@polkadot/react-identicon": "3.1.4",
+    "@polkadot/react-identicon": "3.6.2",
     "@polkadot/types": "10.9.1",
     "@polkadot/util": "12.4.2",
     "@polkadot/wasm-crypto": "7.2.1",
     "@polkadot/x-randomvalues": "12.4.2",
     "@radix-ui/react-scroll-area": "1.0.4",
-    "@types/jest": "27.5.1",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
@@ -33,13 +32,9 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
-    "react-transition-group": "4.4.5",
-    "web-vitals": "3.3.1"
+    "react-transition-group": "4.4.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
     "@types/node": "18.17.1",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
