--- a/.github/workflows/cb-cd.yml
+++ b/.github/workflows/cb-cd.yml
@@ -55,6 +55,7 @@ jobs:
             REACT_APP_DEFAULT_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_CONTRACT_ADDRESS }}
             REACT_APP_DEFAULT_TESTNET_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_TESTNET_CONTRACT_ADDRESS }}
             REACT_APP_CB_MASTER_NFT_ADDRESS=${{ secrets.REACT_APP_CB_MASTER_NFT_ADDRESS }}
+            REACT_APP_AUTH_API_ADDRESS=${{ secrets.REACT_APP_AUTH_API_ADDRESS }}
 
   deploy-to-k8s:
     needs: build-simple-nft-image
