--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coinbase-nft-portal-frontend",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
@@ -21,6 +21,7 @@
     "@polkadot/wasm-crypto": "7.2.1",
     "@polkadot/x-randomvalues": "12.4.2",
     "@radix-ui/react-scroll-area": "1.0.4",
+    "@sentry/react": "7.69.0",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
