--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
-    "react-transition-group": "4.4.5"
+    "react-transition-group": "4.4.5",
+    "socket.io-client": "4.7.2"
   },
   "devDependencies": {
     "@types/node": "18.17.1",
