--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "endOfLine": "lf",
-  "printWidth": 120,
-  "semi": true,
+  "printWidth": 80,
+  "semi": false,
   "bracketSpacing": true,
-  "bracketSameLine": true,
+  "bracketSameLine": false,
   "arrowParens": "always",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "useTabs": false
 }
