add GTM analytics

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coinbase-nft-portal-frontend",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
@@ -10,15 +10,14 @@
   },
   "dependencies": {
     "@gear-js/api": "0.33.3",
-    "@gear-js/react-hooks": "0.6.5",
+    "@gear-js/react-hooks": "0.6.6",
     "@gear-js/ui": "0.5.19",
     "@mantine/form": "6.0.8",
     "@polkadot/api": "10.9.1",
     "@polkadot/extension-dapp": "0.46.5",
     "@polkadot/types": "10.9.1",
     "@polkadot/util": "12.4.2",
-    "@polkadot/wasm-crypto": "7.2.1",
-    "@polkadot/x-randomvalues": "12.4.2",
+    "@polkadot/wasm-crypto": "7.2.2",
     "@radix-ui/react-scroll-area": "1.0.4",
     "@sentry/react": "7.69.0",
     "assert": "2.0.0",
@@ -30,6 +29,7 @@
     "lucide-react": "0.263.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "2.0.11",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.5",
@@ -39,6 +39,7 @@
     "@types/node": "18.17.1",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@types/react-gtm-module": "2.0.1",
     "@typescript-eslint/eslint-plugin": "5.25.0",
     "@typescript-eslint/parser": "5.25.0",
     "eslint": "8.16.0",
