--- a/.github/workflows/cb-cd.yml
+++ b/.github/workflows/cb-cd.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: mktcode/consecutive-workflow-action@v1 # please read security note
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          
+
   build-simple-nft-image:
     environment: coinbase
     runs-on: ubuntu-latest
@@ -48,14 +48,10 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:coinbase
           build-args: |
             REACT_APP_NODE_ADDRESS=${{ secrets.REACT_APP_NODE_ADDRESS }}
-            REACT_APP_DEFAULT_NODES_URL=${{ secrets.REACT_APP_DEFAULT_NODES_URL }}
-            REACT_APP_IPFS_ADDRESS=${{ secrets.REACT_APP_IPFS_ADDRESS }}
             REACT_APP_IPFS_GATEWAY_ADDRESS=${{ secrets.REACT_APP_IPFS_GATEWAY_ADDRESS }}
-            REACT_APP_TESTNET_NFT_CONTRACT_ADDRESS=${{ secrets.REACT_APP_TESTNET_NFT_CONTRACT_ADDRESS }}
-            REACT_APP_DEFAULT_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_CONTRACT_ADDRESS }}
-            REACT_APP_DEFAULT_TESTNET_CONTRACT_ADDRESS=${{ secrets.REACT_APP_DEFAULT_TESTNET_CONTRACT_ADDRESS }}
             REACT_APP_CB_MASTER_NFT_ADDRESS=${{ secrets.REACT_APP_CB_MASTER_NFT_ADDRESS }}
             REACT_APP_AUTH_API_ADDRESS=${{ secrets.REACT_APP_AUTH_API_ADDRESS }}
+            REACT_APP_CB_GTM_ID=${{ secrets.REACT_APP_CB_GTM_ID }}
 
   deploy-to-k8s:
     needs: build-simple-nft-image
