--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@polkadot/types": "10.9.1",
     "@polkadot/util": "12.4.2",
     "@polkadot/wasm-crypto": "7.2.2",
+    "@polkadot/x-randomvalues": "12.5.1",
     "@radix-ui/react-scroll-area": "1.0.4",
     "@sentry/react": "7.69.0",
     "assert": "2.0.0",
