--- a/.github/workflows/cb-cd.yml
+++ b/.github/workflows/cb-cd.yml
@@ -51,7 +51,7 @@ jobs:
             REACT_APP_IPFS_GATEWAY_ADDRESS=${{ secrets.REACT_APP_IPFS_GATEWAY_ADDRESS }}
             REACT_APP_CB_MASTER_NFT_ADDRESS=${{ secrets.REACT_APP_CB_MASTER_NFT_ADDRESS }}
             REACT_APP_AUTH_API_ADDRESS=${{ secrets.REACT_APP_AUTH_API_ADDRESS }}
-            REACT_APP_CB_GTM_ID=${{ secrets.REACT_APP_CB_GTM_ID }}
+            REACT_APP_GTM_ID=${{ secrets.REACT_APP_GTM_ID }}
 
   deploy-to-k8s:
     needs: build-simple-nft-image
